<?xml version="1.0" encoding="utf-8"?>
<!--<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    app:cardBackgroundColor="@android:color/white"-->
<!--    app:cardElevation="2dp"-->
<!--    app:cardPreventCornerOverlap="true">-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical">-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical"-->
<!--            android:padding="16dp">-->

<!--            <TextView-->
<!--                android:id="@+id/product_title"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/job_title"-->
<!--                android:textAppearance="?attr/textAppearanceHeadline6" />-->

<!--            <TextView-->
<!--                android:id="@+id/product_price"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/post_date"-->
<!--                android:textAppearance="?attr/textAppearanceBody2" />-->

<!--        </LinearLayout>-->
<!--    </LinearLayout>-->
<!--</com.google.android.material.card.MaterialCardView>-->
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/myOpenRolesGridBackgroundColor"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:background="?attr/colorPrimaryDark"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/job_title"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:id="@+id/job_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/post_date"
                android:textAppearance="?attr/textAppearanceBody2"
                android:id="@+id/post_date"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/requests"
                android:textAppearance="?attr/textAppearanceBody2"
                android:id="@+id/requests_count"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/referred"
                android:textAppearance="?attr/textAppearanceBody2"
                android:id="@+id/referred_count"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/view_requests_button"
                style="@style/Widget.Shrine.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:text="@string/view_requests" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>